--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "yiisoft/yii2-app-advanced",
-    "description": "Yii 2 Advanced Project Template",
+    "description": "Yii 2 Advanced Project. Portfolio project",
     "keywords": ["yii2", "framework", "advanced", "project template"],
     "homepage": "https://www.yiiframework.com/",
     "type": "project",
@@ -17,12 +17,28 @@
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3"
+        "yiisoft/yii2-symfonymailer": "~2.0.3",
+
+        "kotchuprik/yii2-sortable-widgets": "*",
+        "himiklab/yii2-easy-thumbnail-image-helper": "*",
+        "himiklab/yii2-sitemap-module": "*",
+        "yii2mod/yii2-settings": "*",
+        "vova07/yii2-imperavi-widget": "*",
+
+        "kartik-v/yii2-widget-fileinput": "@dev",
+        "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-datetimepicker": "@dev",
+
+        "mihaildev/yii2-ckeditor": "*",
+        "mihaildev/yii2-elfinder": "*",
+
+        "ext-json": "*",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.2.0",
-        "yiisoft/yii2-faker": "~2.0.0",
+        "yiisoft/yii2-faker": "^2.0",
         "phpunit/phpunit": "~9.5.0",
         "codeception/codeception": "^5.0.0 || ^4.0",
         "codeception/lib-innerbrowser": "^4.0 || ^3.0 || ^1.1",
